Fix gcc portability on Solaris 9 SPARC boxes.

* mpi/longlong.h: Use __sparcv8 as alias for __sparc_v8__.
--

This patch has been in use by pkgsrc for
  SunOS mentok 5.9 Generic_117171-02 sun4u sparc SUNW,Sun-Fire-V240
since 2004.

GnuPG-bug-id: 1703
Signed-off-by: Werner Koch <wk@gnupg.org>
[cherry-pick of commit d281624]
Signed-off-by: Jussi Kivilinna <jussi.kivilinna@iki.fi>